加密保护/WinLicense v2.1.0.10/WinlicenseSDK/ExamplesSDK/EncryptedStrings/C/Visual C++/WinlicenseSDK.h


 extern "C" _stdcall __declspec(dllimport) int WLGenTrialExtensionFileKey(char* TrialHash, int Level,\
                                                int NumDays, int NumExec, SYSTEMTIME* NewDate, int NumMinutes,\
                                                int TimeRuntime, char* BufferOut);


 extern "C" _stdcall __declspec(dllimport) int WLGenTrialExtensionRegistryKey(char* TrialHash, int Level,\
                                                int NumDays, int NumExec, SYSTEMTIME* NewDate, int NumMinutes,\
                                                int TimeRuntime, char* pKeyName, char* pKeyValueName, char* BufferOut);


 extern "C" _stdcall __declspec(dllimport) int WLGenPassword(char* TrialHash, char* Name, char* BufferOut);


 extern "C" _stdcall __declspec(dllimport) int WLGenLicenseFileKey(char* LicenseHash, char* UserName, char* Organization,\
                                                char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, \
                                                int CountryId, int Runtime, int GlobalMinutes, char* BufferOut);


 extern "C" _stdcall __declspec(dllimport) int WLGenLicenseRegistryKey(char* LicenseHash, char* UserName, char* Organization,\
                                                char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, \
                                                int CountryId, int Runtime, int GlobalMinutes, char* KeyName, char* KeyValueName, char* BufferOut);


 extern "C" _stdcall __declspec(dllimport) int WLGenLicenseTextKey(char* LicenseHash, char* UserName, char* Organization,\
                                                char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, \
                                                int CountryId, int Runtime, int GlobalMinutes, char* BufferOut);


 extern "C" _stdcall __declspec(dllimport) int WLGenLicenseSmartKey(char* LicenseHash, char* UserName, char* Organization,\
                                                char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, \
                                                char* BufferOut);


 extern "C" _stdcall __declspec(dllimport) int WLRegGetStatus(int* pExtendedInfo);


 extern "C" _stdcall __declspec(dllimport) int WLTrialGetStatus(int* pExtendedInfo);


 extern "C" _stdcall __declspec(dllimport) int WLTrialExtGetStatus(void);

 
 extern "C" _stdcall __declspec(dllimport) bool WLRegGetLicenseInfo(char* pName, char* pCompanyName, char* pCustomData);


 extern "C" _stdcall __declspec(dllimport) int WLTrialTotalDays(void);

 
 extern "C" _stdcall __declspec(dllimport) int WLTrialTotalExecutions(void);


 extern "C" _stdcall __declspec(dllimport) int WLTrialDaysLeft(void);


 extern "C" _stdcall __declspec(dllimport) int WLTrialExecutionsLeft(void);


 extern "C" _stdcall __declspec(dllimport) int WLTrialExpirationDate(SYSTEMTIME* pExpDate);


 extern "C" _stdcall __declspec(dllimport) int WLTrialGlobalTimeLeft(void);


 extern "C" _stdcall __declspec(dllimport) int WLTrialRuntimeLeft(void);


 extern "C" _stdcall __declspec(dllimport) int WLTrialLockedCountry(void);


 extern "C" _stdcall __declspec(dllimport) int WLRegDaysLeft(void);


 extern "C" _stdcall __declspec(dllimport) int WLRegExecutionsLeft(void);


 extern "C" _stdcall __declspec(dllimport) int WLRegExpirationDate(SYSTEMTIME* pExpDate);


 extern "C" _stdcall __declspec(dllimport) int WLRegTotalExecutions(void);


 extern "C" _stdcall __declspec(dllimport) int WLRegTotalDays(void);


 extern "C" _stdcall __declspec(dllimport) bool WLHardwareGetID(char* pHardwareId);


 extern "C" _stdcall __declspec(dllimport) bool WLHardwareCheckID(char* pHardwareId);


 extern "C" _stdcall __declspec(dllimport) bool WLRegSmartKeyCheck(char* UserName, char* Organization, char* Custom, char* AsciiKey);


 extern "C" _stdcall __declspec(dllimport) bool WLRegNormalKeyCheck(char* AsciiKey);


 extern "C" _stdcall __declspec(dllimport) bool WLRegNormalKeyInstallToFile(char* AsciiKey);


 extern "C" _stdcall __declspec(dllimport) bool WLRegNormalKeyInstallToRegistry(char* AsciiKey);


 extern "C" _stdcall __declspec(dllimport) bool WLRegSmartKeyInstallToFile(char* UserName, char* Organization, char* Custom, char* AsciiKey);


 extern "C" _stdcall __declspec(dllimport) bool WLRegSmartKeyInstallToRegistry(char* UserName, char* Organization, char* Custom, char* AsciiKey);

 
 extern "C" _stdcall __declspec(dllimport) int WLTrialCustomCounterInc(int Value, int CounterId);


 extern "C" _stdcall __declspec(dllimport) int WLTrialCustomCounterDec(int Value, int CounterId);


 extern "C" _stdcall __declspec(dllimport) int WLTrialCustomCounter(int CounterId);


 extern "C" _stdcall __declspec(dllimport) bool WLRestartApplication(void);


 extern "C" _stdcall __declspec(dllimport) int WLRegLockedCountry(void);


 extern "C" _stdcall __declspec(dllimport) int WLRegRuntimeLeft(void);


 extern "C" _stdcall __declspec(dllimport) int WLRegGlobalTimeLeft(void);


 extern "C" _stdcall __declspec(dllimport) bool WLRegRemoveCurrentKey(void);

 
 extern "C" _stdcall __declspec(dllimport) bool WLHardwareGetFormattedID(int BlockCharSize, int Uppercase, char* Buffer);

 
 extern "C" _stdcall __declspec(dllimport) bool WLPasswordCheck(char* UserName, char* Password);


 extern "C" _stdcall __declspec(dllimport) bool WLTrialExpireTrial(void);


 extern "C"  _stdcall __declspec(dllimport) char* WLStringDecrypt(char* pString);


 extern "C" int _stdcall WLGenTrialExtensionFileKey(char* TrialHash, int Level,\
                                            int NumDays, int NumExec, SYSTEMTIME* NewDate, int NumMinutes,\
                                            int TimeRuntime, char* BufferOut);


 extern "C" int _stdcall WLGenTrialExtensionRegistryKey(char* TrialHash, int Level,\
                          int NumDays, int NumExec, SYSTEMTIME* NewDate, int NumMinutes,\
                          int TimeRuntime, char* pKeyName, char* pKeyValueName, char* BufferOut);


 extern "C" int _stdcall WLGenPassword(char* TrialHash, char* Name, char* BufferOut);


 extern "C" int _stdcall WLGenLicenseFileKey(char* LicenseHash, char* UserName, char* Organization,\
                          char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, \
                          int CountryId, int Runtime, int GlobalMinutes, char* BufferOut);


 extern "C" int _stdcall WLGenLicenseRegistryKey(char* LicenseHash, char* UserName, char* Organization,\
                          char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, \
                          int CountryId, int Runtime, int GlobalMinutes, char* KeyName, char* KeyValueName, char* BufferOut);


 extern "C" int _stdcall WLGenLicenseTextKey(char* LicenseHash, char* UserName, char* Organization,\
                          char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, \
                          int CountryId, int Runtime, int GlobalMinutes, char* BufferOut);


 extern "C" int _stdcall WLGenLicenseSmartKey(char* LicenseHash, char* UserName, char* Organization,\
                          char* CustomData, char* MachineID, int NumDays, int NumExec, SYSTEMTIME* NewDate, \
                          char* BufferOut);


 extern "C" int _stdcall WLRegGetStatus(int* pExtendedInfo);


 extern "C" int _stdcall WLTrialGetStatus(int* pExtendedInfo);


 extern "C" int _stdcall WLTrialExtGetStatus(void);

 
 extern "C" bool _stdcall WLRegGetLicenseInfo(char* pName, char* pCompanyName, char* pCustomData);


 extern "C" int _stdcall WLTrialTotalDays(void);

 
 extern "C" int _stdcall WLTrialTotalExecutions(void);


 extern "C" int _stdcall WLTrialDaysLeft(void);


 extern "C" int _stdcall WLTrialExecutionsLeft(void);


 extern "C" int _stdcall WLTrialExpirationDate(SYSTEMTIME* pExpDate);


 extern "C" int _stdcall WLTrialGlobalTimeLeft(void);


 extern "C" int _stdcall WLTrialRuntimeLeft(void);


 extern "C" int _stdcall WLTrialLockedCountry(void);


 extern "C" int _stdcall WLRegDaysLeft(void);


 extern "C" int _stdcall WLRegExecutionsLeft(void);


 extern "C" int _stdcall WLRegExpirationDate(SYSTEMTIME* pExpDate);


 extern "C" int _stdcall WLRegTotalExecutions(void);


 extern "C" int _stdcall WLRegTotalDays(void);


 extern "C" void _stdcall WLHardwareGetID(char* pHardwareId);


 extern "C" bool _stdcall WLHardwareCheckID(char* pHardwareId);


 extern "C" bool _stdcall WLRegSmartKeyCheck(char* UserName, char* Organization, char* Custom, char* AsciiKey);


 extern "C" bool _stdcall WLRegNormalKeyCheck(char* AsciiKey);


 extern "C" bool _stdcall WLRegNormalKeyInstallToFile(char* AsciiKey);


 extern "C" bool _stdcall WLRegNormalKeyInstallToRegistry(char* AsciiKey);


 extern "C" bool _stdcall WLRegSmartKeyInstallToFile(char* UserName, char* Organization, char* Custom, char* AsciiKey);


 extern "C" bool _stdcall WLRegSmartKeyInstallToRegistry(char* UserName, char* Organization, char* Custom, char* AsciiKey);

 
 extern "C" int _stdcall WLTrialCustomCounterInc(int Value, int CounterId);


 extern "C" int _stdcall WLTrialCustomCounterDec(int Value, int CounterId);


 extern "C" int _stdcall WLTrialCustomCounter(int CounterId);


 extern "C" bool _stdcall WLRestartApplication(void);


 extern "C" int _stdcall WLRegLockedCountry(void);


 extern "C" int _stdcall WLRegRuntimeLeft(void);


 extern "C" int _stdcall WLRegGlobalTimeLeft(void);


 extern "C" bool _stdcall WLRegRemoveCurrentKey(void);

 
 extern "C" bool _stdcall WLHardwareGetFormattedID(int BlockCharSize, int Uppercase, char* Buffer);

 
 extern "C" bool _stdcall WLPasswordCheck(char* UserName, char* Password);


 extern "C" bool _stdcall WLTrialExpireTrial(void);


 extern "C" char* _stdcall WLStringDecrypt(char* pString);